[package]
name = "dimension-client"
version = "1.0.0"
authors = ["Adam Smith <adam@dimensionlabs.io>"]
edition = "2018"
description = "A client for interacting with the Dimension network"
readme = "README.md"
documentation = "https://docs.rs/dimension-client"
homepage = "https://dimensionlabs.io"
repository = "https://github.com/DimensionLabs/dimension-node/tree/master/client"
license-file = "../LICENSE"

[lib]
name = "dimension_client"
crate-type = ["rlib", "cdylib"]
path = "lib/lib.rs"

[[bin]]
name = "dimension-client"
path = "src/main.rs"
doc = false

[dependencies]
async-trait = "0.1.50"
base16 = "0.2.1"
base64 = "0.13.0"
dimension-execution-engine = { version = "1.4.3", path = "../execution_engine" }
dimension-node = { version = "1.0.0", path = "../node" }
dimension-hashing = { version = "1.4.2", path = "../hashing" }
dimension-types = { version = "1.4.5", path = "../types" }
clap = "2"
humantime = "2"
jsonrpc-lite = "0.5.0"
once_cell = "1"
rand = "0.8.3"
reqwest = { version = "0.11.1", features = ["json"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[build-dependencies]
cbindgen = { version = "0.18", optional = true }

[dev-dependencies]
anyhow = "1"
dimension-node = { path = "../node" }
futures = "0.3.13"
hyper = "0.14.4"
jsonrpc-lite = "0.5.0"
semver = "0.11"
serde = "1"
tower = "0.4.6"
warp = "0.3.0"
warp-json-rpc = "0.3.0"

[features]
default = ["ffi", "dimentsion-mainnet"]
ffi = ["cbindgen"]
dimentsion-mainnet = ["dimension-node/dimentsion-mainnet"]

[package.metadata.deb]
features = ["vendored-openssl"]
revision = "0"
assets = [
    ["../target/release/dimension-client", "/usr/bin/dimension-client", "755"],
]
extended-description = """
Package for Dimension Client to connect to Dimension Node.

For information on using package, see https://github.com/DimensionLabs/dimension-node
"""

[package.metadata.rpm]
package = "dimension-client"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
dimension-client = { path = "/usr/bin/dimension-client" }
