[package]
name = "global-state-update-gen"
version = "0.2.0"
authors = ["Bartłomiej Kamiński <bart@dimensionlabs.io>"]
edition = "2018"

[dependencies]
base16 = "0.2.1"
base64 = "0.13"
casper-engine-test-support = { path = "../../execution_engine_testing/test_support" }
dimension-execution-engine = { path = "../../execution_engine" }
dimension-hashing = { path = "../../hashing" }
dimension-types = { path = "../../types" }
clap = "2.33"
lmdb = "0.8"
