[package]
name = "create-test-node-01"
version = "0.1.0"
authors = ["Adam Smith <adam@dimensionlabs.io>"]
edition = "2018"

[[bin]]
name = "create_test_node_01"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
create-test-node-shared = { path = "../create-test-node-shared" }
