[package]
name = "transfer-to-existing-account"
version = "0.1.0"
authors = ["Adam Smith <adam@dimensionlabs.io>"]
edition = "2018"

[[bin]]
name = "transfer_to_existing_account"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = { path = "../../../contract" }
dimension-types = { path = "../../../../types" }
