[package]
name = "transfer-to-public-key"
version = "0.1.0"
authors = ["Adam Smith <adam@dimensionlabs.io>"]
edition = "2018"

[[bin]]
name = "transfer_to_public_key"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
dimension-contract = { path = "../../../contract" }
dimension-types = { path = "../../../../types" }
