[package]
name = "create-purse-01"
version = "0.1.0"
authors = ["Henry Till <henrytill@gmail.com>", "Ed Hastings <ed@dimensionlabs.io"]
edition = "2018"

[[bin]]
name = "create_purse_01"
path = "src/bin/main.rs"
bench = false
doctest = false
test = false

[dependencies]
dimension-contract = { path = "../../../contract" }
dimension-types = { path = "../../../../types" }
