[package]
name = "dictionary-call"
version = "0.1.0"
authors = ["Adam Smith <adam@dimensionlabs.io>"]
edition = "2018"

[[bin]]
name = "dictionary_call"
path = "src/bin/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/default", "dictionary/default"]

[dependencies]
casper-contract = { path = "../../../contract", default-features = false }
dimension-types = { path = "../../../../types" }
dictionary = { path = "../dictionary", default-features = false }
