[package]
name = "ee-1225-regression"
version = "0.1.0"
authors = ["Adam Smith <adam@dimensionlabs.io>"]
edition = "2018"

[[bin]]
name = "ee_1225_regression"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
dimension-contract = { path = "../../../contract" }
dimension-types = { path = "../../../../types" }
