[package]
name = "ee-601-regression"
version = "0.1.0"
authors = ["Ed Hastings <ed@dimensionlabs.io>"]
edition = "2018"

[[bin]]
name = "ee_601_regression"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = { path = "../../../contract" }
dimension-types = { path = "../../../../types" }
